bdd/bdd-reverse/kubernetes-manifests/network/reference-data.network-policy.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reference-data.network-policy-ingress
  namespace: gap
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  rules:
    - host: bookstore.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 80
