bdd/bdd-reverse/kubernetes-manifests/network/stage-games-lux.network-policy.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stage-games-lux.network-policy-ingress
  namespace: gap
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - stage-games-lux.isoftbet.com
      secretName: my-tls-secret-file
  rules:
    - host: stage-games-lux.isoftbet.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 80
