bdd/bdd-reverse/kubernetes-manifests/network/default-egress.network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-all-egress
  namespace: gap
spec:
  podSelector: {}
  egress:
    - to:
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
  policyTypes:
    - Egress
